<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="accessibility_desc">"This service allows the use of custom shade by sliding down from the top of the screen. No data is stored on the device or sent over the internet. Usages are explained below. 

 Permissions: 

 - Observe your actions: Receives a response from the system when the top of the screen is touched to trigger the shade. 

 - Retrieve window content: Required for automatic clicking of some settings after the user chooses they want to toggle them in the app-provided interface"</string>
    <string name="accessibitlity_permission_dialog_message">"The app was not able to find where the ACCESSIBILITY permission is located on your device. Please try to manually search for this in your phone's settings and enable it."</string>
    <string name="accessibitlity_permission_error">"Unfortunately the Accessibility settings didn't open. Please open manually."</string>
    <string name="action_denied_try_manually">Action denied. Please open manually.</string>
    <string name="activit_not_found">No Activity found to handle this feature</string>
    <string name="ad">Ad</string>
    <string name="adjustable_control_center">"Adjustable Control
Center"</string>
    <string name="admob_app_id">ca-app-pub-4563216819962244~9870724157</string>
    <string name="admob_banner_id">ca-app-pub-4563216819962244/8071213867</string>
    <string name="admob_interstitial_id">ca-app-pub-4563216819962244/4131968850</string>
    <string name="admob_native_id">ca-app-pub-4563216819962244/9990800191</string>
    <string name="admob_rewarded_id">ca-app-pub-4563216819962244/2653212132</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="agree">Agree</string>
    <string name="al_exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="al_exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="al_exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="al_exo_controls_fastforward_description">Fast forward</string>
    <string name="al_exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="al_exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="al_exo_controls_hide">Hide player controls</string>
    <string name="al_exo_controls_next_description">Next</string>
    <string name="al_exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="al_exo_controls_overflow_show_description">Show additional settings</string>
    <string name="al_exo_controls_pause_description">Pause</string>
    <string name="al_exo_controls_play_description">Play</string>
    <string name="al_exo_controls_playback_speed">Speed</string>
    <string name="al_exo_controls_playback_speed_normal">Normal</string>
    <string name="app_name">Mi Control Center</string>
    <string name="contact_support_title">Customer Support</string>
    <string name="contact_us">Contact us</string>
    <string name="flip">Flip</string>
    <string name="flip_horizontally">Flip horizontally</string>
    <string name="flip_vertically">Flip vertically</string>
    <string name="go_pro">Go Pro</string>
    <string name="hide_notification_content_summary">Hides notification content and prevents sensitive tiles to be clicked.</string>
    <string name="personalized_ads">Personalized Ads</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="profile_pic">Choose Profile Picture</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="security_lockscreen">Security on lockscreen</string>
    <string name="select">Select</string>
    <string name="send">Send</string>
    <string name="send_email">Send us an email</string>
    <string name="sum_max_children">Maximum allowed notifications in a group (default of 8)</string>
    <string name="sum_qs_size">Sets size of the quick setting and its icon</string>
    <string name="sum_small_corners">Makes the quick tiles section square</string>
    <string name="summary_auto_dark">Split colors according to system dark theme.</string>
    <string name="summary_backup_restore">You can also you this to create your own themes and switch them up.</string>
    <string name="summary_colorize_hu_badge">Colorizes the small app name card with the notification color</string>
    <string name="summary_custom_background">Choose an image from your gallery as the background for quick settings</string>
    <string name="summary_custom_carrier">Choose a custom text to be displayed in place of the carrier name.</string>
    <string name="summary_disable_hu_badge">Remove the small app name card over the status bar and show it in the notification</string>
    <string name="summary_dynamic_colors">Colorize all notifications background with their respective color</string>
    <string name="summary_force_brightness">Enable only if you experience brightness issues while switching apps or unlocking the device.</string>
    <string name="summary_hu">Show styled pop-up (peek) notifications at the top of the screen.</string>
    <string name="summary_keep_auto_bright">"Don't change to manual when adjusting brightness. This may cause issues on some devices."</string>
    <string name="summary_log_brightness">Use logarithmic brightness slider values from Android 9+ which spreads the values more evenly on the slider, instead of having most values in the lower half.</string>
    <string name="summary_override_system">Helps showing the app instead of the system.</string>
    <string name="summary_restart_to_apply">Restart app to apply changes</string>
    <string name="summary_system_hu">This method is optional. By default the app tries to stop system notifications from popping up, but may fail at times. Use this to achieve perfect results. *Remember to turn this back off if you uninstall the app.</string>
    <string name="summary_tint_active_icon">Use \"Active tile color\" for the inside icon</string>
    <string name="summary_usage_warning">Turns the icon red when this amount is exceeded</string>
    <string name="summary_use_sections">With Silent notifications</string>
    <string name="summary_wallpaper">Useful to keep the app in memory for some devices.</string>
    <string name="support_hint">Describe the issue (at least 20 characters)</string>
    <string name="terms_and_conditions_label">Terms and Conditions</string>
    <string name="theme_dynamic">Dynamic Color Notifications</string>
    <string name="title_auto_dark">Auto dark mode</string>
    <string name="title_auto_expand_notifs">Auto expand notifications</string>
    <string name="title_background_type">Background type</string>
    <string name="title_backup_restore">Backup &amp; Restore</string>
    <string name="title_big_tiles_grid">Big Tiles Grid</string>
    <string name="title_brightness_color">Brightness slider color</string>
    <string name="title_cc_text">Custom \"Control Center\" text</string>
    <string name="title_cc_time">Show time and date in Control Center</string>
    <string name="title_centered_actions">Centered notification actions (like reply, mark as read)</string>
    <string name="title_circle_battery">Circular battery indicator</string>
    <string name="title_colorize_hu_badge">Colorize pop-up badge</string>
    <string name="title_custom_background">Custom background image</string>
    <string name="title_custom_carrier">Custom carrier name</string>
    <string name="title_default_color">Background color</string>
    <string name="title_disable_hu_badge">Disable pop-up badge</string>
    <string name="title_fg_color">Active tile color</string>
    <string name="title_fingerprint">Override fingerprint gestures</string>
    <string name="title_force_brightness">Force screen brightness</string>
    <string name="title_header_num">Number of header tiles</string>
    <string name="title_hu">Use Heads-Up</string>
    <string name="title_hu_timeout">Pop-up time on screen</string>
    <string name="title_icon_shape">Quick settings icons shape</string>
    <string name="title_keep_auto_bright">Keep auto brightness</string>
    <string name="title_log_brightness">Use new brightness</string>
    <string name="title_max_children">Max grouped notifications</string>
    <string name="title_notifications_background">Notifications background color</string>
    <string name="title_override_system">Override system panel</string>
    <string name="title_power_button">Show power menu button</string>
    <string name="title_qs_player">Integrate media players in quick settings</string>
    <string name="title_qs_player_above">Media player above big tiles</string>
    <string name="title_qs_size">Tile size</string>
    <string name="title_remove_in_fullscreen">Remove in fullscreen</string>
    <string name="title_remove_on_lockscreen">Remove on lock screen</string>
    <string name="title_reset_all_colors">Reset all colors to default</string>
    <string name="title_show_data_usage">Show Mobile Data Usage</string>
    <string name="title_show_netspeed">Show network speed meter</string>
    <string name="title_show_seconds">Show seconds in the clock</string>
    <string name="title_show_signal_x">Show X symbol on signal when mobile data is off</string>
    <string name="title_small_corners">Small corners</string>
    <string name="title_system_hu">Disable system heads-up completely</string>
    <string name="title_text_color">Text color</string>
    <string name="title_tiles_grid">Tiles Grid</string>
    <string name="title_tint_active_icon">Tint active icon</string>
    <string name="title_tips">Helpful Tips</string>
    <string name="title_usage_cycle_start">Usage reset day</string>
    <string name="title_usage_show_today">Show today usage</string>
    <string name="title_usage_warning">Warning at (GB)</string>
    <string name="title_use_sections">Enable notification sections</string>
    <string name="title_use_slide_anim">Use slide animation when swiping between panels</string>
    <string name="title_wallpaper">Override wallpaper</string>
    <string name="trigger_only_home">Show only on home screen</string>
    <string name="trigger_remove_keyboard">Remove when keyboard is showing</string>
    <string name="trigger_vibrate">Vibrate on tap</string>
    <string name="upgrade">Upgrade to Pro</string>
    <string name="use_roboto_font">Use Roboto font</string>
    <string name="view_licences">View licenses</string>
    <string name="write_review">Write a good review</string>
</resources>