<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference android:title="@string/title_backup_restore" android:key="backup_restore" android:summary="@string/summary_backup_restore" />
    <Preference android:title="@string/profile_pic" android:key="key_profile" />
    <EditTextPreference android:title="@string/title_custom_carrier" android:key="custom_carrier_name" android:summary="@string/summary_custom_carrier" android:dialogLayout="@layout/pref_dialog_edit_text" />
    <ListPreference android:entries="@array/listArray_autoExpand" android:title="@string/title_auto_expand_notifs" android:key="auto_expand_notifs" android:defaultValue="first" android:entryValues="@array/listValues_autoExpand" app:allowDividerBelow="false" app:useSimpleSummaryProvider="true" />
    <SwitchPreference android:title="@string/title_override_system" android:key="override_stock" android:summary="@string/summary_override_system" android:widgetLayout="@layout/switch_preference" android:defaultValue="false" />
    <SwitchPreference android:title="@string/title_wallpaper" android:key="override_wallpaper" android:summary="@string/summary_wallpaper" android:widgetLayout="@layout/switch_preference" android:defaultValue="false" />
    <SwitchPreference android:title="@string/title_fingerprint" android:key="override_fp" android:widgetLayout="@layout/switch_preference" android:defaultValue="false" />
    <SwitchPreference android:title="@string/title_force_brightness" android:key="force_brightness" android:summary="@string/summary_force_brightness" android:widgetLayout="@layout/switch_preference" android:defaultValue="false" />
    <SwitchPreference android:title="@string/title_log_brightness" android:key="use_log_brightness" android:summary="@string/summary_log_brightness" android:widgetLayout="@layout/switch_preference" android:defaultValue="false" />
    <SwitchPreference android:title="@string/title_keep_auto_bright" android:key="keep_auto_bright" android:summary="@string/summary_keep_auto_bright" android:widgetLayout="@layout/switch_preference" android:defaultValue="false" />
    <SwitchPreference android:title="@string/title_qs_player" android:key="qs_media_player" android:summary="@string/summary_restart_to_apply" android:widgetLayout="@layout/switch_preference" android:defaultValue="true" />
    <SwitchPreference android:title="@string/title_remove_in_fullscreen" android:key="remove_in_fullscreen" android:widgetLayout="@layout/switch_preference" android:defaultValue="false" />
    <SwitchPreference android:title="@string/title_remove_on_lockscreen" android:key="remove_on_lockscreen" android:widgetLayout="@layout/switch_preference" android:defaultValue="false" />
    <SwitchPreference android:title="@string/security_lockscreen" android:key="hideContent" android:summary="@string/hide_notification_content_summary" android:widgetLayout="@layout/switch_preference" android:defaultValue="true" />
    <SwitchPreference android:title="@string/use_roboto_font" android:key="useProductSans" android:summary="@string/summary_restart_to_apply" android:widgetLayout="@layout/switch_preference" android:defaultValue="false" app:allowDividerBelow="false" />
    <Preference android:title="Cancel Premium" android:key="cancel_premium" app:isPreferenceVisible="false" />
</PreferenceScreen>
