<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference android:title="@string/title_custom_background" android:key="wallpaper_res" android:summary="@string/summary_custom_background" />
    <com.treydev.shades.widgets.preference.BackgroundTypePreference android:entries="@array/listArray_bgType" android:title="@string/title_background_type" android:key="bg_type" android:defaultValue="color" android:entryValues="@array/listValues_bgType" app:allowDividerBelow="false" app:useSimpleSummaryProvider="true" />
    <SwitchPreference android:title="@string/title_auto_dark" android:key="auto_dark_mode" android:summary="@string/summary_auto_dark" android:widgetLayout="@layout/switch_preference" android:defaultValue="true" />
    <com.treydev.shades.widgets.ColorsTogglePreferenceGroup android:key="current_colors">
        <com.jaredrummler.android.colorpicker.ColorPreference android:title="@string/title_default_color" android:key="panel_color" app:cpv_showAlphaSlider="true" />
        <com.jaredrummler.android.colorpicker.ColorPreference android:title="@string/title_notifications_background" android:key="key_notif_bg" app:cpv_showAlphaSlider="true" />
        <com.jaredrummler.android.colorpicker.ColorPreference android:title="@string/title_fg_color" android:key="fg_color" />
        <com.jaredrummler.android.colorpicker.ColorPreference android:title="@string/title_text_color" android:key="key_text_color" />
        <com.jaredrummler.android.colorpicker.ColorPreference android:title="@string/title_brightness_color" android:key="default_brightness_color" app:allowDividerBelow="false" />
        <com.jaredrummler.android.colorpicker.ColorPreference android:title="@string/title_default_color" android:key="panel_color_dark" app:cpv_showAlphaSlider="true" />
        <com.jaredrummler.android.colorpicker.ColorPreference android:title="@string/title_notifications_background" android:key="key_notif_bg_dark" app:cpv_showAlphaSlider="true" />
        <com.jaredrummler.android.colorpicker.ColorPreference android:title="@string/title_fg_color" android:key="fg_color_dark" />
        <com.jaredrummler.android.colorpicker.ColorPreference android:title="@string/title_text_color" android:key="key_text_color_dark" />
        <com.jaredrummler.android.colorpicker.ColorPreference android:title="@string/title_brightness_color" android:key="default_brightness_color_dark" app:allowDividerBelow="false" />
    </com.treydev.shades.widgets.ColorsTogglePreferenceGroup>
    <SwitchPreference android:title="@string/theme_dynamic" android:key="dynamic_colors_n" android:summary="@string/summary_dynamic_colors" android:widgetLayout="@layout/switch_preference" android:defaultValue="false" />
    <SwitchPreference android:title="@string/title_tint_active_icon" android:key="tint_active_icon" android:summary="@string/summary_tint_active_icon" android:widgetLayout="@layout/switch_preference" android:defaultValue="false" />
    <Preference android:title="@string/title_reset_all_colors" android:key="key_reset_all_colors" app:allowDividerBelow="false" />
</androidx.preference.PreferenceScreen>
