<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@id/main_items" android:checkableBehavior="single">
        <item android:icon="@drawable/ic_premium_crown" android:id="@id/go_pro" android:title="@string/go_pro" />
        <item android:icon="@drawable/ic_helpful_tips" android:id="@id/tips" android:title="@string/title_tips" app:iconTint="?colorControlNormal" />
        <item android:icon="@drawable/ic_thumbs_up" android:id="@id/write_review" android:title="@string/write_review" app:iconTint="?colorControlNormal" />
        <item android:icon="@drawable/ic_email" android:id="@id/contact_us" android:title="@string/contact_us" />
    </group>
    <group android:id="@null" android:checkableBehavior="single">
        <item android:id="@id/personalized_ads" android:title="@string/personalized_ads" />
        <item android:id="@id/privacy_policy" android:title="@string/privacy_policy" />
        <item android:id="@id/view_licences" android:title="@string/terms_and_conditions_label" />
    </group>
</menu>
