<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/crop_image_menu_rotate_left" android:id="@id/crop_image_menu_rotate_left" android:visible="false" android:title="@string/rotate_left" android:iconTint="?android:textColorPrimary" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/crop_image_menu_rotate_right" android:id="@id/crop_image_menu_rotate_right" android:title="@string/rotate_right" android:iconTint="?android:textColorPrimary" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/crop_image_menu_flip" android:id="@id/crop_image_menu_flip" android:title="@string/flip" android:iconTint="?android:textColorPrimary" app:showAsAction="ifRoom">
        <menu>
            <item android:id="@id/crop_image_menu_flip_horizontally" android:title="@string/flip_horizontally" />
            <item android:id="@id/crop_image_menu_flip_vertically" android:title="@string/flip_vertically" />
        </menu>
    </item>
    <item android:id="@id/crop_image_menu_crop" android:title="@string/select" app:showAsAction="always" />
</menu>
