<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.MaterialToolbar android:id="@id/toolbar" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent" app:title="@string/contact_support_title" />
    <EditText android:gravity="start|top" android:id="@id/edit_text" android:background="@null" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_margin="16.0dp" android:hint="@string/support_hint" android:ems="10" android:singleLine="false" android:layout_weight="1.0" android:inputType="textMultiLine" app:layout_constraintBottom_toTopOf="@id/button_send" app:layout_constraintTop_toBottomOf="@id/toolbar" />
    <androidx.appcompat.widget.AppCompatButton android:enabled="false" android:id="@id/button_send" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="16.0dp" android:text="@string/send" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
